# synchronisation-semaphores

./: .gitignore  CMakeLists.txt  README.md
include/: const.h  message.h  queue.h  sem.h  sh-mem.h  terminal-stream.h  worker.h
src/: main.c  message.c  queue.c  sem.c  sh-mem.c  terminal-stream.c  worker.c
